# TinyCircuits-TinyTVs-Firmware

./: FileNotFoundSplash.hpp  HardwareInit.ino  JPEGStreamer.cpp  JPEGStreamer.h  NoCardSplash.hpp  PlaybackErrorSplash.hpp  README.md  SD_AVI.ino  StorageErrorSplash.hpp  TinyCircuits-TinyTVs-Firmware-merge.ino  TinyCircuits-TinyTVs-Firmware-merge.ino.rpipico.uf2  TinyCircuits-TinyTVs-Firmware.ino  TinyCircuits-TinyTVs-Firmware.ino.rpipico.uf2  TinyTV-2-firmware.uf2  TinyTV-Mini-firmware.uf2  TinyTV2.h  TinyTV2.ino  TinyTVKit.h  TinyTVMini.h  TinyTVsamd21.ino  USB_CDC.h  USB_MSC.h  audio.ino  cmd.txt  display.ino  drawEffects.ino  globals.h  globals_and_buffers.h  infrared.ino  screenEffects.cpp  screenEffects.h  settings.h  shutoffsfx.h  versions.h  videoBuffer.h
src/: CMakeLists.txt  config.h  main.cpp  main.ino  tinytv.cpp  tinytv.h
src/GraphicsBuffer2/: GraphicsBuffer2.cpp  GraphicsBuffer2.h  library.properties
src/TinyScreen/: GC9A01_commands.h  SSD1357_commands.h  ST7789_commands.h  SetXY_GC9A01.h  SetXY_SSD1331.h  SetXY_SSD1357.h  SetXY_ST7789.h  TinyScreen.cpp  TinyScreen.h  rp2040_pio_spi.h
src/debug/: debug.h  debug_arm.cpp  debug_arm.h  debug_unix.cpp  debug_unix.h
src/demuxer/: avi_demuxer.cpp  avi_demuxer.h  base_demuxer.cpp  base_demuxer.h  demuxer.cpp  demuxer.h  mov_demuxer.cpp  mov_demuxer.h
src/display/: display.h  display_arm.cpp  display_arm.h  display_base.cpp  display_base.h  display_unix.cpp  display_unix.h
src/files/: files.cpp  files.h  files_arm.cpp  files_arm.h  files_base.cpp  files_base.h  files_unix.cpp  files_unix.h
(+68 files in other folders)
